--- a/package.json
+++ b/package.json
@@ -16,7 +16,16 @@
   },
   "dependencies": {
     "gatsby": "^4.15.1",
+    "i18next": "^21.8.5",
+    "i18next-browser-languagedetector": "^6.1.4",
     "react": "^18.1.0",
-    "react-dom": "^18.1.0"
+    "react-dom": "^18.1.0",
+    "react-i18next": "^11.16.9"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.7",
+    "gatsby-plugin-postcss": "^5.15.0",
+    "postcss": "^8.4.14",
+    "tailwindcss": "^3.0.24"
   }
 }
