--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "i18next-browser-languagedetector": "^6.1.4",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
-    "react-i18next": "^11.16.9"
+    "react-i18next": "^11.16.9",
+    "react-loops": "^1.3.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.7",
