--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "gatsby": "^4.15.1",
+    "gatsby-plugin-image": "^2.19.0",
     "gatsby-source-contentful": "^7.16.0",
     "i18next": "^21.8.5",
     "i18next-browser-languagedetector": "^6.1.4",
