--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@contentful/rich-text-html-renderer": "^15.13.1",
     "@headlessui/react": "^1.6.6",
     "@heroicons/react": "^1.0.6",
+    "contentful": "^9.1.34",
     "gatsby": "^4.15.1",
     "gatsby-plugin-image": "^2.19.0",
     "gatsby-source-contentful": "^7.16.0",
+    "html-react-parser": "^3.0.4",
     "i18next": "^21.8.5",
     "i18next-browser-languagedetector": "^6.1.4",
     "react": "^18.1.0",
