--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-i18next": "^11.16.9",
-    "react-loops": "^1.3.0"
+    "react-loops": "^1.3.0",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.7",
