--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "i18next-browser-languagedetector": "^6.1.4",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-floating-whatsapp": "^5.0.6",
     "react-i18next": "^11.16.9",
     "react-loops": "^1.3.0",
     "react-slick": "^0.29.0",
