--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "babel-plugin-styled-components": "^2.0.7",
     "bootstrap": "^5.1.3",
     "contentful": "^9.1.32",
     "dotenv": "^16.0.1",
@@ -26,7 +27,7 @@
     "gatsby-plugin-react-helmet": "^5.16.0",
     "gatsby-plugin-sass": "^5.16.0",
     "gatsby-plugin-sharp": "^4.16.1",
-    "gatsby-plugin-styled-components": "^5.16.0",
+    "gatsby-plugin-styled-components": "^6.7.0",
     "gatsby-source-contentful": "^7.14.0",
     "gatsby-source-filesystem": "^4.16.0",
     "gatsby-transformer-sharp": "^4.16.0",
@@ -34,6 +35,8 @@
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.1.0",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "sass": "^1.59.3",
+    "styled-components": "^5.3.9"
   }
 }
